@@ -1,5 +1,11 @@
 2011-02-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	Fix debug printing of TYPE_INSTANCE.
+	* expprint.c (print_subexp_standard) <TYPE_INSTANCE>: New.
+	(dump_subexp_body_standard) <TYPE_INSTANCE>: New.
+
+2011-02-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	Fix debug printing of BINOP_IN, OP_OBJC_MSGCALL,
 	OP_F77_UNDETERMINED_ARGLIST, OP_COMPLEX, OP_OBJC_SELECTOR, OP_NAME,
 	OP_OBJC_NSSTRING, OP_F90_RANGE and OP_DECFLOAT.
